--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@ body{
     align-items: center;
     padding-top: 12px;
 }
+
+.answer-card:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
+}
