add progress bar and end screen

--- a/style.css
+++ b/style.css
@@ -25,3 +25,21 @@ body{
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.05);
 }
+
+.card-img-top{
+    aspect-ratio: 1.6/1;
+    object-fit: contain;
+}
+
+.finished-card-headline{
+    text-align: center;
+    font-size: 2.0rem;
+    font-family: var(--bs-body-font-family);
+    padding-bottom: 20px;
+}
+
+.finished-card-text{
+    text-align: center;
+    font-size: 1.25rem;
+    font-family: var(--bs-body-font-family);
+}
